--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,4 +5,5 @@
   <ion-input #login>Login</ion-input>
   <ion-input #motDePasse>Mot de passe</ion-input>
   <ion-button (click)=logIn(login.value,motDePasse.value)>Login</ion-button>
+  <ion-button routerLink="/sign-up">Sign-Up</ion-button>
 </ion-header>
