Message d'erreur lors de l'entrée de mauvais id de connexion

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,8 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Log In</ion-title>
   </ion-toolbar>
-  <ion-input #login>Login</ion-input>
-  <ion-input #motDePasse>Mot de passe</ion-input>
+  <ion-input #login>Login : </ion-input>
+  <ion-input #motDePasse>Password : </ion-input>
   <ion-button (click)=logIn(login.value,motDePasse.value)>Login</ion-button>
+  <div [hidden]="hideErrMessage" class="connectionFailedMessage">Incorrect login or password. Please try again or create an account.</div>
 </ion-header>
