--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,32 @@
-<app-header [title]="'Todos'"></app-header>
-<ion-header>
+<app-header [title]="'Log In'"></app-header>
+
+<ion-content>
+  <form  #form="ngForm" (ngSubmit)="logIn(login.value,motDePasse.value)">
+    <ion-grid>
+      <ion-row color="primary" justify-content-center>
+        <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+          <div padding>
+            <ion-item>
+              <ion-input  name="name" type="text" placeholder="Email" ngModel required #login></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-input name="password" type="password" placeholder="Password" ngModel required #motDePasse></ion-input>
+            </ion-item>
+          </div>
+          <div padding>
+            <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block">Log in</ion-button>
+          </div>
+          <div padding>
+            <ion-button  size="large" type="signin" expand="block" routerLink="/sign-up">Sign up</ion-button>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
+</ion-content>
+
+
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>Log In</ion-title>
   </ion-toolbar>
@@ -8,34 +35,4 @@
   <ion-button (click)=logIn(login.value,motDePasse.value)>Login</ion-button>
   <ion-button routerLink="/sign-up">Sign-Up</ion-button>
   <div [hidden]="hideErrMessage" class="connectionFailedMessage">Incorrect login or password. Please try again or create an account.</div>
-</ion-header>
-<!-- <ion-content  color="primary">
-  <form  #form="ngForm" (ngSubmit)="register(form)">
-    <ion-grid>
-      <ion-row color="primary" justify-content-center>
-        <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-          <div text-center>
-            <h3>Create your account!</h3>
-          </div>
-          <div padding>
-            <ion-item>
-              <ion-input  name="name" type="text" placeholder="Name" ngModel required></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-input name="email" type="email" placeholder="your@email.com" ngModel required></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-input name="password" type="password" placeholder="Password" ngModel required></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-input name="confirm" type="password" placeholder="Password again" ngModel required></ion-input>
-            </ion-item>
-          </div>
-          <div padding>
-            <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block">Register</ion-button>
-          </div>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </form>
-</ion-content> -->
+</ion-header> -->
