addList page + interactions

--- a/src/app/listslist/listslist.page.html
+++ b/src/app/listslist/listslist.page.html
@@ -18,6 +18,6 @@
   </ion-list>
   <section>
     <ion-button expand="block" [routerDirection]="'root'"
-                [routerLink]="'/addlist'">Add a New list</ion-button>
+                [routerLink]="'/add-list'">Add a New list</ion-button>
   </section>
 </ion-content>
