--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 <app-header [title]="'Log In'"></app-header>
 
 <ion-content>
-  <form  #form="ngForm" (ngSubmit)="logIn(login.value,motDePasse.value)">
+  <form  #form="ngForm">
     <ion-grid>
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
@@ -17,7 +17,7 @@
             <ion-text color="danger" *ngIf="!hideErrMessage">{{errMessage}}</ion-text>
           </div>
           <div padding>
-            <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block">Log in</ion-button>
+            <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block"  (click)="logIn(login.value,motDePasse.value)">Log in</ion-button>
           </div>
           <div padding>
             <ion-button  size="large" type="signin" expand="block" routerLink="/sign-up">Sign up</ion-button>
