--- a/src/app/small-components/header/header.component.html
+++ b/src/app/small-components/header/header.component.html
@@ -7,5 +7,8 @@
       {{this.userName}}
       <ion-button (click)="this.authServ.logout()">Disconnect</ion-button>
     </ion-buttons>
+    <ion-buttons slot="end" *ngIf="!connected">
+      <ion-button (click)="this.router.navigate(['/login'])">Login</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
