--- a/src/app/todoslist/todoslist.page.html
+++ b/src/app/todoslist/todoslist.page.html
@@ -1,4 +1,4 @@
-<app-header [title]="'Todos'"></app-header>
+<app-header [title]="param"></app-header>
 
 <ion-content fullscreen>
   <ion-list>
@@ -8,7 +8,6 @@
           <h2>{{ todo.title }}</h2>
         </ion-label>
       </ion-item>
-
       <ion-item-options side="end">
         <ion-item-option color="danger" (click)="delete(todo)">
           <ion-icon slot="top" name="trash"></ion-icon>
