Afficher une liste de todo, en ajouter et en supprimer : nouvelle archi OK

--- a/src/app/addtodo/addtodo.page.html
+++ b/src/app/addtodo/addtodo.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>addItem</ion-title>
+    <ion-title>Add an item to {{listeID}} list</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -14,7 +14,7 @@
         </ion-input>
         <ion-text [hidden]="ctrlTitle.valid || ctrlTitle.pristine || name" color="danger">Title is required</ion-text>
       </ion-item>
-    </ion-list>    
+    </ion-list>
     <div class="ion-padding">
       <ion-button expand="block" type="submit" class="ion-no-margin" [disabled]="!addListForm.valid">
         Add item</ion-button>
