--- a/src/app/listslist/listslist.page.html
+++ b/src/app/listslist/listslist.page.html
@@ -5,7 +5,7 @@
   <ion-title>Listes personnelles</ion-title>
   <ion-list>
     <ion-item-sliding *ngFor="let list of lists">
-      <ion-item ion-button (click)="test(list.title)" [routerLink]="['/todoslist', 'test123']">
+      <ion-item ion-button (click)="test(list.title)" [routerLink]="['/todoslist', list.id]">
         <ion-label>
           <h2>{{ list.title }}</h2>
         </ion-label>
