--- a/src/app/todoslist/todoslist.page.html
+++ b/src/app/todoslist/todoslist.page.html
@@ -4,6 +4,7 @@
   <ion-list>
     <ion-item-sliding *ngFor="let todo of todos">
       <ion-item>
+        <ion-checkbox slot="start" checked="{{todo.isDone}}" (click)="update(todo)"></ion-checkbox>
         <ion-label>
           <h2>{{ todo.title }}</h2>
         </ion-label>
