La page principale affiche les liste des trois types (owner, read et write)

--- a/src/app/listslist/listslist.page.html
+++ b/src/app/listslist/listslist.page.html
@@ -24,6 +24,24 @@
   </section>
   <br>
   <ion-title>Listes visibles</ion-title>
+  <ion-list>
+    <ion-item-sliding *ngFor="let list of listsWatchOnly">
+      <ion-item ion-button (click)="test(list.title)" [routerLink]="['/todoslist', list.id]">
+        <ion-label>
+          <h2>{{ list.title }}</h2>
+        </ion-label>
+      </ion-item>
+    </ion-item-sliding>
+  </ion-list>
   <br>
   <ion-title>Listes partagées</ion-title>
+  <ion-list>
+    <ion-item-sliding *ngFor="let list of listsShared">
+      <ion-item ion-button (click)="test(list.title)" [routerLink]="['/todoslist', list.id]">
+        <ion-label>
+          <h2>{{ list.title }}</h2>
+        </ion-label>
+      </ion-item>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
