--- a/src/app/contributor-manager/contributor-manager.page.html
+++ b/src/app/contributor-manager/contributor-manager.page.html
@@ -8,5 +8,12 @@
 </ion-header>
 
 <ion-content>
-
+  <form  #form="ngForm" (ngSubmit)="addNewContributor(login.value)">
+    <div padding>
+      <ion-item>
+        <ion-input  name="email" type="email" placeholder="your@email.com" ngModel required #login></ion-input>
+      </ion-item>
+      <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block">Register</ion-button>
+    </div>
+  </form>
 </ion-content>
