Les options affichées en dessous de la liste de TODO dependent de nos droits dessus

--- a/src/app/todoslist/todoslist.page.html
+++ b/src/app/todoslist/todoslist.page.html
@@ -1,4 +1,4 @@
-<app-header [title]="listTitle + ' -- Replace with list title'"></app-header>
+<app-header [title]="this.listTitle"></app-header>
 
 <ion-content fullscreen>
   <ion-list>
@@ -17,9 +17,8 @@
     </ion-item-sliding>
   </ion-list>
   <section>
-  <ion-button expand="block" [routerDirection]="'root'"
-  [routerLink]="['/addtodo', listeID]">Add a New Todo</ion-button>
-  <ion-button expand="block" (click)="openContributorManager()" [disabled]="!isOwner()">Manage contributor</ion-button>
-  <ion-button expand="block" (click)="debug()">DEBUG</ion-button>
+  <ion-button expand="block" [routerDirection]="'root'" [routerLink]="['/addtodo', listeID]" *ngIf="canAddTodo()">Add a New Todo</ion-button>
+  <ion-button expand="block" (click)="openContributorManager()" *ngIf="isOwner()">Manage contributor</ion-button>
+  <ion-button expand="block" (click)="getTitle()">DEBUG</ion-button>
   </section>
 </ion-content>
