--- a/src/app/contributor-manager/contributor-manager.page.html
+++ b/src/app/contributor-manager/contributor-manager.page.html
@@ -20,8 +20,24 @@
       <div class="ion-padding">
         <ion-text color="danger" *ngIf="!hideErrMessage">{{errMessage}}</ion-text>
         <ion-text color="success" *ngIf="!hideSuccessMessage">{{successMessage}}</ion-text>
+        <ion-text color="warning" *ngIf="!hideFailedMessage">{{failedMessage}}</ion-text>
       </div>
       <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block">Register</ion-button>
     </div>
   </form>
+  <!-- <ion-list>
+    <ion-item-sliding *ngFor="let todo of todos">
+      <ion-item>
+        <ion-checkbox slot="start" checked="{{todo.isDone}}" (click)="update(todo)"></ion-checkbox>
+        <ion-label>
+          <h2>{{ todo.title }}</h2>
+        </ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="delete(todo)">
+          <ion-icon slot="top" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list> -->
 </ion-content>
