Ajout d'un boutton page precedente sur les pages de todolist

--- a/src/app/listslist/listslist.page.html
+++ b/src/app/listslist/listslist.page.html
@@ -1,4 +1,4 @@
-<app-header [title]="'Listes disponibles'"></app-header>
+<app-header [title]="'Available Lists'"></app-header>
 
 <ion-content fullscreen>
   <br>
