--- a/src/app/small-components/header/header.component.html
+++ b/src/app/small-components/header/header.component.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start" *ngIf="canGoBack">
+      <ion-button (click)="previousPage()">BACK</ion-button>
+    </ion-buttons>
     <ion-title>
       {{this.title}}
     </ion-title>
