--- a/src/app/small-components/header/header.component.html
+++ b/src/app/small-components/header/header.component.html
@@ -3,9 +3,12 @@
     <ion-buttons slot="start" *ngIf="canGoBack">
       <ion-button (click)="previousPage()">BACK</ion-button>
     </ion-buttons>
-    <ion-title>
+    <ion-title slot="start">
       {{this.title}}
     </ion-title>
+    <ion-buttons *ngIf="connected">
+      <ion-button (click)="this.reload()">Refresh</ion-button>
+    </ion-buttons>
     <ion-buttons slot="end" *ngIf="connected">
       {{this.userName}}
       <ion-button fill="solid" color="primary" (click)="this.authServ.logout()">Disconnect</ion-button>
