--- a/src/app/small-components/header/header.component.html
+++ b/src/app/small-components/header/header.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start" *ngIf="canGoBack">
+    <ion-buttons slot="start" *ngIf="canGoBack && connected">
       <ion-button (click)="previousPage()">BACK</ion-button>
     </ion-buttons>
     <ion-title slot="start">
@@ -11,7 +11,7 @@
     </ion-buttons>
     <ion-buttons slot="end" *ngIf="connected">
       {{this.userName}}
-      <ion-button fill="solid" color="primary" (click)="this.authServ.logout()">Disconnect</ion-button>
+      <ion-button fill="solid" color="primary" (click)="this.logout()">Disconnect</ion-button>
     </ion-buttons>
     <ion-buttons slot="end" *ngIf="!connected">
       <ion-button fill="solid" color="primary" (click)="this.router.navigate(['/login'])">Login</ion-button>
