--- a/src/app/listslist/listslist.page.html
+++ b/src/app/listslist/listslist.page.html
@@ -19,8 +19,7 @@
     </ion-item-sliding>
   </ion-list>
   <section>
-    <ion-button expand="block" [routerDirection]="'root'"
-                [routerLink]="'/add-list'">Add a New list</ion-button>
+    <ion-button expand="block" [routerLink]="['/add-list']">Add a New list</ion-button>
   </section>
   <br>
   <ion-title>Lists shared - read only</ion-title>
