--- a/src/app/todoslist/todoslist.page.html
+++ b/src/app/todoslist/todoslist.page.html
@@ -17,7 +17,7 @@
     </ion-item-sliding>
   </ion-list>
   <section>
-  <ion-button expand="block" [routerLink]="['/addtodo', listeID]" *ngIf="canAddTodo()">Add a New Todo</ion-button>
+  <ion-button expand="block" [routerLink]="['/addtodo']" *ngIf="canAddTodo()">Add a New Todo</ion-button>
   <ion-button expand="block" (click)="openContributorManager()" *ngIf="isOwner()">Manage contributor</ion-button>
   <!-- <ion-button expand="block" (click)="getTitle()">DEBUG</ion-button> -->
   </section>
