--- a/src/app/add-list/add-list.page.html
+++ b/src/app/add-list/add-list.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>addList</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [title]="'Add a new list'"></app-header>
 
 <ion-content>
   <form (ngSubmit)="addList()" #addListForm="ngForm">
