--- a/src/app/addtodo/addtodo.page.html
+++ b/src/app/addtodo/addtodo.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Add an item to {{listeID}} list</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header [title]="'Add an item'"></app-header>
 
 <ion-content>
   <form (ngSubmit)="addTodo()" #addListForm="ngForm">
