--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,7 +7,7 @@
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div padding>
             <ion-item>
-              <ion-input  name="name" type="text" placeholder="Email" ngModel required #login></ion-input>
+              <ion-input  name="name" type="text" placeholder="Email" ngModel email required #login></ion-input>
             </ion-item>
             <ion-item>
               <ion-input name="password" type="password" placeholder="Password" ngModel required #motDePasse></ion-input>
@@ -18,6 +18,9 @@
           </div>
           <div padding>
             <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block"  (click)="logIn(login.value,motDePasse.value)">Log in</ion-button>
+          </div>
+          <div padding>
+            <ion-button  size="large" type="signin" expand="block" routerLink="/password-recover">Recover Password</ion-button>
           </div>
           <div padding>
             <ion-button  size="large" type="signin" expand="block" routerLink="/sign-up">Sign up</ion-button>
